<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Kinoactivity">

    <Button
        android:id="@+id/button"
        android:layout_width="235dp"
        android:layout_height="51dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="fromphoto"
        android:text="@string/fromphoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="235dp"
        android:layout_height="51dp"
        android:layout_marginTop="276dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="fromperson"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="235dp"
        android:layout_height="53dp"
        android:layout_marginTop="404dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="fromrandom"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="81dp"
        android:layout_marginTop="184dp"
        android:text="@string/phototext"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="205dp"
        android:layout_height="92dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="@string/selecttext"
        android:textColor="@color/cardview_light_background"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="231dp"
        android:layout_height="110dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/randomtext"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>