<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Photoactivity">

    <Button
        android:id="@+id/snapbtn"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="180dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/photobtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detectbtn"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="180dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/analyzebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="382dp"
        android:layout_height="204dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.108" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>