<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Randomactivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="findrandom"
        android:padding="15dp"
        android:text="@string/randombtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="93dp"
        android:layout_height="59dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/holo_orange_light"
        android:padding="10dp"
        android:popupBackground="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="238dp"
        android:layout_height="83dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:padding="15dp"
        android:text="@string/selectn"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="369dp"
        android:layout_height="32dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/show1"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/row1"
        android:layout_width="203dp"
        android:layout_height="24dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:text="@string/row1"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/row2"
        android:layout_width="216dp"
        android:layout_height="25dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/row2"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/row3"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/row3"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/row4"
        android:layout_width="209dp"
        android:layout_height="30dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/row4"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/rand1"
        android:layout_width="383dp"
        android:layout_height="45dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:paddingLeft="15dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rand2"
        android:layout_width="381dp"
        android:layout_height="46dp"
        android:layout_marginTop="616dp"
        android:paddingLeft="15dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rand3"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:paddingLeft="15dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rand4"
        android:layout_width="368dp"
        android:layout_height="41dp"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:paddingLeft="15dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>