<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Infoactivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/prosoxi"
                android:textColor="@color/cardview_light_background"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="70dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/odigies1"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="380dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/odigies2"
                android:textColor="@android:color/background_light"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="500dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/odigies4"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="25sp" />

        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>