<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Personactivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:layout_marginTop="440dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="select"
        android:text="@string/selectbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/button5"
        android:layout_width="136dp"
        android:layout_height="57dp"
        android:layout_marginTop="436dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="clearselected"
        android:text="@string/clearbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.027" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="81dp"
        android:layout_height="45dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TableLayout
        android:id="@+id/tableforbtns"
        android:layout_width="398dp"
        android:layout_height="359dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimary"

        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


    </TableLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:shadowColor="@color/cardview_light_background"
        android:text="@string/numbers"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="264dp"
        android:layout_height="50dp"
        android:layout_marginTop="428dp"
        android:text="@string/numbersa"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.019" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>